	PR rtl-optimization/17266 	* regmove.c (optimize_reg_copy_3): Make a new SUBREG for each insn.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@87793 138bc75d-0d04-0410-961f-82ee72b054a4